@@ -1280,6 +1280,12 @@ SEXP coerceVector(SEXP v, SEXPTYPE type)
 	case RAWSXP:
 	    ans = coerceToRaw(v);	    break;
 	case STRSXP:
+	    if (ATTRIB(v) == R_NilValue)
+		switch(TYPEOF(v)) {
+		case INTSXP:
+		case REALSXP:
+		    return R_deferred_coerceToString(v, NULL);
+		}
 	    ans = coerceToString(v);	    break;
 	case EXPRSXP:
 	    ans = coerceToExpression(v);    break;
